# Text-Embedings-API

./: Dockerfile  README.md  pyproject.toml
src/: apis.py  main.py  text_embeddings.py
